fix: Prevent audio icon from jumping during rendering & transitions by rendering it globally

--- a/src/components/ScoreBoard.css
+++ b/src/components/ScoreBoard.css
@@ -12,7 +12,9 @@
 }
 
 
-.score-board {
-    font-size: 0.9rem;
-    padding: 0.75rem 1rem;
-}
+ @media (max-width: 780px) { 
+    .score-board {
+        font-size: 0.9rem;
+        padding: 0.75rem 1rem;
+    }
+ }
